--- a/getdatasub.html
+++ b/getdatasub.html
@@ -1,4 +1,10 @@
+<html>
+    <head>
+        
 <style>
+    body{
+        background-color:blue;
+    }
     .pull-left.ui-navbar-toggle.navbar-toggle.auto-icon-side-menu-open {
       display: none;
     }
@@ -84,9 +90,10 @@ a{
  visibility:hidden;
 }
 </style>
+</head>
 
-
-
+<body>
+    
 <script>
   document.addEventListener("DOMContentLoaded", function() {
    
@@ -157,6 +164,9 @@ subtext.forEach(function(element) {
 });
   });
 </script>
+</body>
+
+</html>
 
 
 
