--- a/googletagmanager.html
+++ b/googletagmanager.html
@@ -1,12 +1,8 @@
 <html>
     <head>
-        <link rel="stylesheet" href="https://sllion1.github.io/ok/getdatasub.css">
+        <link rel="stylesheet" href="getdatasub.css">
     </head>
-   
-       
 <body>
-
- 
-
+    <script src="script.js"></script>
 </body>
 </html>
